<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExpressGrabbing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_label_pregister">用户注册</string>
    <string name="login_hint_input_name">请输入名字</string>
    <string name="login_hint_input_password">请输入密码</string>
    <string name="login_label_forget_pwd">忘记密码</string>
    <string name="login_btn_login">登录</string>
    <string name="login_label_login">登录</string>
    <string name="login_label_other_login_way">其他登录方式</string>
    <string name="reg_btn_register">注册</string>
    <string name="login_hint_input_confirm_password">请再次输入密码</string>
    <string name="title_home">首页</string>
    <string name="title_grabbing">抢单</string>
    <string name="title_mine">我的</string>
    <string name="title_more">更多</string>
    <string name="title_waiting_grab_list">待抢列表</string>
    <string name="title_grabbed_list">已抢列表</string>
    <string name="title_publish">发单</string>
    <string name="z4">注册</string>
    <string name="z5">注册</string>

</resources>
