<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:orientation="vertical" >

   

    <RelativeLayout
        android:layout_marginTop="36dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            style="@style/input"
            android:id="@+id/reg_text_nickname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/login_hint_input_name"
            >

            <requestFocus />
        </EditText>

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/c_empty"
            android:src="@drawable/nicheng_icon" />

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_marginTop="24dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            style="@style/input"
            android:id="@+id/reg_text_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPassword"  
            android:hint="@string/login_hint_input_password"
            >
        </EditText>

        <ImageView
            android:contentDescription="@string/c_empty"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/password_icon" />

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_marginTop="24dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            style="@style/input"
            android:id="@+id/reg_text_confirm_password"
            android:paddingLeft="50dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPassword" 
            android:hint="@string/login_hint_input_confirm_password"
            >
        </EditText>

        <ImageView
            android:contentDescription="@string/c_empty"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/password_icon" />

    </RelativeLayout>

    <Button
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/commnt_button_selector"
        android:layout_marginTop="24dp"
        android:id="@+id/c_reg_btn_doregister"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/reg_btn_register" />

  

</LinearLayout>
